Added burger menu dropdown

--- a/index.html
+++ b/index.html
@@ -44,30 +44,36 @@
                 <ul class="main-list">
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
                     <li class="dropdown-btn" data-id="one"><h3>À Propos</h3>
-                        <ul class="sub-list" id="one">
-                            <li>
-                                <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
-                            </li>
-                            <li>
-                                <a href="#myProfil" class="sub-list-link" title="Aller vers mon profil">Mon Profil</a>
-                            </li>
-                        </ul>
+                        <div class="sub-list-wrapper" id="one">
+                            <ul class="sub-list">
+                                <li>
+                                    <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
+                                </li>
+                                <li>
+                                    <a href="#myProfil" class="sub-list-link" title="Aller vers mon profil">Mon Profil</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="dropdown-btn" data-id="three"><h3>Compétences</h3>
-                        <ul class="sub-list" id="three">
-                            <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences HTML">HTML</a></li>
-                            <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences CSS">CSS</a></li>
-                            <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences JavaScript">JavaScript</a>
-                            </li>
-                        </ul>
+                        <div class="sub-list-wrapper" id="three">
+                            <ul class="sub-list">
+                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences HTML">HTML</a></li>
+                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences CSS">CSS</a></li>
+                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences JavaScript">JavaScript</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="dropdown-btn" data-id="two"><h3>Formations</h3>
-                        <ul class="sub-list" id="two">
-                            <li><a class="sub-list-link" href="#formation" title="Aller vers mes coordonnées">Baccalauréat</a>
-                            </li>
-                            <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Économie</a></li>
-                            <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Web</a></li>
-                        </ul>
+                        <div class="sub-list-wrapper" id="two">
+                            <ul class="sub-list">
+                                <li><a class="sub-list-link" href="#formation" title="Aller vers mes coordonnées">Baccalauréat</a>
+                                </li>
+                                <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Économie</a></li>
+                                <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Web</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
                 <ul class="btn-list">
@@ -291,7 +297,7 @@
         </li>
     </ul>
 </footer>
-<!--<script src="./src/js/dropdown.js"></script>-->
+<script src="./src/js/dropdown.js"></script>
 <script src="./src/js/main.js"></script>
 </body>
 </html>
