--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--            <input class="burger-button" type="checkbox" name="burger_button" id="cssBurgerButton">-->
             <!-- JS Burger Menu -->
             <button id="burgerButton" class="hidden">Open burger menu</button>
-            <nav id="mainNav" class="main-nav">
+            <nav id="mainNav" class="main-nav opened">
                 <h2 class="hidden">Navigation principale</h2>
                 <div class="burger-wrapper">
                     <a class="navbar-title" href="index.html">Loïc D.</a>
@@ -44,7 +44,7 @@
                 <ul class="main-list">
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
                     <li class="dropdown-btn" data-id="one"><h3>À Propos</h3>
-                        <div class="sub-list-wrapper" id="one">
+                        <div class="sub-list-wrapper expand-dropdown" id="one">
                             <ul class="sub-list">
                                 <li>
                                     <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
@@ -56,7 +56,7 @@
                         </div>
                     </li>
                     <li class="dropdown-btn" data-id="three"><h3>Compétences</h3>
-                        <div class="sub-list-wrapper" id="three">
+                        <div class="sub-list-wrapper expand-dropdown" id="three">
                             <ul class="sub-list">
                                 <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences HTML">HTML</a></li>
                                 <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences CSS">CSS</a></li>
@@ -66,7 +66,7 @@
                         </div>
                     </li>
                     <li class="dropdown-btn" data-id="two"><h3>Formations</h3>
-                        <div class="sub-list-wrapper" id="two">
+                        <div class="sub-list-wrapper expand-dropdown" id="two">
                             <ul class="sub-list">
                                 <li><a class="sub-list-link" href="#formation" title="Aller vers mes coordonnées">Baccalauréat</a>
                                 </li>
