Add scroll to top button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Loïc D.</title>
 </head>
 <body>
-<!--<a class="top-btn" href="#header">Haut de la page</a>-->
+<a class="top-btn" href="#header">Haut de la page</a>
 <header id="header">
     <h1 class="hidden">Loïc Delanoë,&nbsp;Développeur web</h1>
     <ul class="header-list">
