Fix animation when no js

--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
         <p data-animation="showUp">Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui fournit un design soigné et
             qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que l’accessibilité pour
             les personnes en situations de handicap.</p>
-        <ul class="opinion-wrapper" data-animation="showUp">
-            <li class="opinion-card">
+        <ul class="opinion-wrapper">
+            <li class="opinion-card" data-animation="showUp">
                 <h3 class="opinion-title">Design Web</h3>
                 <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne idée
                     de ce que leur site va donner quand il sera déployé.</p>
             </li>
-            <li class="opinion-card">
+            <li class="opinion-card" data-animation="showUp">
                 <h3 class="opinion-title">Développement Web</h3>
                 <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions des langages&nbsp;(sémantique en HTML).</p>
             </li>
-            <li class="opinion-card">
+            <li class="opinion-card" data-animation="showUp">
                 <h3 class="opinion-title">Accessibilité</h3>
                 <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être pensé
                     aussi pour les personnes en situation de handicap.</p>
@@ -201,8 +201,8 @@
         <h2 id="formation" class="title" data-animation="showUp">Mes formations</h2>
         <p data-animation="showUp">Les formations que j’ai suivies ont été fondamentales pour définir ma voie professionnelle.&nbsp;Elles m’ont
             offert la clarté nécessaire pour trouver ma passion et déterminer la voie que je voulais suivre.</p>
-        <ul class="cards-list base-container" data-animation="showUp">
-            <li id="eco" class="formation-card">
+        <ul class="cards-list base-container">
+            <li id="eco" class="formation-card" data-animation="showUp">
                 <h3 class="formation-title">Licence Économie</h3>
                 <small>Option Gestion</small>
                 <time>2021</time>
@@ -213,7 +213,7 @@
                     <li>Statistiques appliquées</li>
                 </ul>
             </li>
-            <li class="formation-card alternative">
+            <li class="formation-card alternative" data-animation="showUp">
                 <h3 class="formation-title">Bachelier Infographie</h3>
                 <small>Option Web</small>
                 <time>2023</time>
@@ -225,7 +225,7 @@
                     <li>Programmation</li>
                 </ul>
             </li>
-            <li class="formation-card">
+            <li class="formation-card" data-animation="showUp">
                 <h3 class="formation-title">Baccalauréat</h3>
                 <small>Option Mathématiques&nbsp;/&nbsp;LLCE</small>
                 <time>2022</time>
