Fix animation border bottom footer

--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
             </li>
         </ul>
     </section>
-    <section class="footer-contact-section section" data-animation="showUp">
+    <section class="footer-contact-section section">
         <h2 class="hidden">Me contacter</h2>
         <article class="footer-contact-wrapper base-container">
-            <ul class="footer-contact-list">
+            <ul class="footer-contact-list" data-animation="showUp">
                 <li>
                     <h3>Mon profil vous intéresse&nbsp;?</h3>
                 </li>
