--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
           rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link rel="stylesheet" href="./css/reset.css">
-<!--    <link rel="stylesheet" href="./css/style.css">-->
-<!--    <link rel="stylesheet" href="./css/media-queries.css">-->
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <title>Loïc D.</title>
@@ -30,10 +28,6 @@
             <h2 class="navbar-title"><a href="index.html">Loïc D.</a></h2>
         </li>
         <li>
-            <!-- Pure CSS Burger Menu -->
-<!--            <label class="hidden" for="cssBurgerButton">Open burger menu</label>-->
-<!--            <input class="burger-button" type="checkbox" name="burger_button" id="cssBurgerButton">-->
-            <!-- JS Burger Menu -->
             <button id="burgerButton" class="hidden">Open burger menu</button>
             <nav id="mainNav" class="main-nav opened">
                 <h2 class="hidden">Navigation principale</h2>
@@ -50,7 +44,8 @@
                                     <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
                                 </li>
                                 <li>
-                                    <a href="#myProfil" class="sub-list-link" title="Aller vers mon profil">Mon Profil</a>
+                                    <a href="#myProfil" class="sub-list-link" title="Aller vers mon profil">Mon
+                                        Profil</a>
                                 </li>
                             </ul>
                         </div>
@@ -58,9 +53,12 @@
                     <li class="dropdown-btn" data-id="three"><h3>Compétences</h3>
                         <div class="sub-list-wrapper expand-dropdown" id="three">
                             <ul class="sub-list">
-                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences HTML">HTML</a></li>
-                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences CSS">CSS</a></li>
-                                <li><a class="sub-list-link" href="#skills" title="Aller vers les compétences JavaScript">JavaScript</a>
+                                <li><a class="sub-list-link" href="#skills"
+                                       title="Aller vers les compétences HTML">HTML</a></li>
+                                <li><a class="sub-list-link" href="#skills"
+                                       title="Aller vers les compétences CSS">CSS</a></li>
+                                <li><a class="sub-list-link" href="#skills"
+                                       title="Aller vers les compétences JavaScript">JavaScript</a>
                                 </li>
                             </ul>
                         </div>
@@ -70,8 +68,10 @@
                             <ul class="sub-list">
                                 <li><a class="sub-list-link" href="#formation" title="Aller vers mes coordonnées">Baccalauréat</a>
                                 </li>
-                                <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Économie</a></li>
-                                <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Web</a></li>
+                                <li><a class="sub-list-link" href="#formation"
+                                       title="Aller vers mon profil">Économie</a></li>
+                                <li><a class="sub-list-link" href="#formation" title="Aller vers mon profil">Web</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -111,7 +111,8 @@
             <li>
                 <div class="contact-mail-wrapper">
                     <h3 class="contact-title">Mon email</h3>
-                    <a href="mailto:loic.del4127@gmail.com" itemprop="email" class="contact-mail">loic.del4127@gmail.com</a>
+                    <a href="mailto:loic.del4127@gmail.com" itemprop="email"
+                       class="contact-mail">loic.del4127@gmail.com</a>
                 </div>
                 <a href="#footerContact" class="cta primary">Contactez moi</a>
             </li>
@@ -130,17 +131,20 @@
                         <figcaption class="hidden">Un MacBook Pro sur une table avec un livre et un stylo</figcaption>
                     </figure>
                     <figure>
-                        <img class="secondary-img" src="./img/about.webp" alt="Diagram avec le nombre 185" data-animation="scaleUp">
+                        <img class="secondary-img" src="./img/about.webp" alt="Diagram avec le nombre 185"
+                             data-animation="scaleUp">
                         <figcaption class="hidden">Diagram</figcaption>
                     </figure>
                     <figure>
-                        <img class="third-img" src="./img/about2.webp" alt="Diagram avec le nombre 250" data-animation="scaleUp">
+                        <img class="third-img" src="./img/about2.webp" alt="Diagram avec le nombre 250"
+                             data-animation="scaleUp">
                         <figcaption class="hidden">Diagram</figcaption>
                     </figure>
                 </li>
                 <li class="about-wrapper">
                     <h3 class="title" data-animation="showUp">Étudiant en développement Web</h3>
-                    <p data-animation="showUp">Depuis mon adolescence,&nbsp;je suis passionné de web et de programmation.&nbsp;Ma détermination m’incite à
+                    <p data-animation="showUp">Depuis mon adolescence,&nbsp;je suis passionné de web et de
+                        programmation.&nbsp;Ma détermination m’incite à
                         persévérer sur chaque projet,&nbsp;sans jamais abandonner.</p>
                     <a class="about-link" href="#" data-animation="showUp">En savoir plus sur moi</a>
                 </li>
@@ -149,8 +153,10 @@
     </section>
     <section id="opinion" class="opinion-section section">
         <h2 class="title" data-animation="showUp">Ce qui est important pour moi</h2>
-        <p data-animation="showUp">Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui fournit un design soigné et
-            qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que l’accessibilité pour
+        <p data-animation="showUp">Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui
+            fournit un design soigné et
+            qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que
+            l’accessibilité pour
             les personnes en situations de handicap.</p>
         <ul class="opinion-wrapper">
             <li class="opinion-card" data-animation="showUp">
@@ -160,38 +166,45 @@
             </li>
             <li class="opinion-card" data-animation="showUp">
                 <h3 class="opinion-title">Développement Web</h3>
-                <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions des langages&nbsp;(sémantique en HTML).</p>
+                <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions
+                    des langages&nbsp;(sémantique en HTML).</p>
             </li>
             <li class="opinion-card" data-animation="showUp">
                 <h3 class="opinion-title">Accessibilité</h3>
-                <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être pensé
+                <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être
+                    pensé
                     aussi pour les personnes en situation de handicap.</p>
             </li>
         </ul>
     </section>
     <section class="skill-section section">
         <h2 id="skills" class="title" data-animation="showUp">Mes principales compétences</h2>
-        <p data-animation="showUp">Mes études m’ont donné les compétences essentielles pour le métier de développeur web.&nbsp;En voici 3 d’entres
+        <p data-animation="showUp">Mes études m’ont donné les compétences essentielles pour le métier de développeur
+            web.&nbsp;En voici 3 d’entres
             elles.</p>
         <article class="skills-wrapper base-container">
             <h3 class="hidden">Les compétences que j'ai aqcuis</h3>
             <figure class="skills-img-wrapper">
                 <img src="./img/article-section-img.webp" alt="code CSS" data-animation="scaleUp">
-                <figcaption class="hidden">Code <abbr title="Cascading Style Sheets">CSS</abbr> dans un éditeur de texte</figcaption>
+                <figcaption class="hidden">Code <abbr title="Cascading Style Sheets">CSS</abbr> dans un éditeur de texte
+                </figcaption>
             </figure>
             <ul class="skills-list">
                 <li id="htmlSkill" data-animation="showUp">
                     <h3><abbr title="HyperText Markup Language">HTML</abbr></h3>
-                    <p>Je veille aux bonnes pratiques en <abbr title="HyperText Markup Language">HTML</abbr>,&nbsp;priorisant l’accessibilité et la sémantique.</p>
+                    <p>Je veille aux bonnes pratiques en <abbr title="HyperText Markup Language">HTML</abbr>,&nbsp;priorisant
+                        l’accessibilité et la sémantique.</p>
                 </li>
                 <li id="cssSkill" data-animation="showUp">
                     <h3><abbr title="Cascading Style Sheets">CSS3</abbr></h3>
-                    <p>J’ai aussi acquis une bonne connaissance de base de <abbr title="Cascading Style Sheets">CSS3</abbr> et maitrise Flexbox ainsi que Grid
+                    <p>J’ai aussi acquis une bonne connaissance de base de <abbr
+                            title="Cascading Style Sheets">CSS3</abbr> et maitrise Flexbox ainsi que Grid
                         Layout.</p>
                 </li>
                 <li id="jsSkill" data-animation="showUp">
                     <h3>JavaScript</h3>
-                    <p>Je suis attentif à son utilisation,&nbsp;et exploite ses capacités en programmation orientée objet
+                    <p>Je suis attentif à son utilisation,&nbsp;et exploite ses capacités en programmation orientée
+                        objet
                         (<abbr title="Programmation Orientée Objet">POO</abbr>).</p>
                 </li>
             </ul>
@@ -199,7 +212,8 @@
     </section>
     <section class="formation-section section">
         <h2 id="formation" class="title" data-animation="showUp">Mes formations</h2>
-        <p data-animation="showUp">Les formations que j’ai suivies ont été fondamentales pour définir ma voie professionnelle.&nbsp;Elles m’ont
+        <p data-animation="showUp">Les formations que j’ai suivies ont été fondamentales pour définir ma voie
+            professionnelle.&nbsp;Elles m’ont
             offert la clarté nécessaire pour trouver ma passion et déterminer la voie que je voulais suivre.</p>
         <ul class="cards-list base-container">
             <li id="eco" class="formation-card" data-animation="showUp">
@@ -256,7 +270,7 @@
 <footer>
     <h2 class="hidden">Footer</h2>
     <nav class="footer-nav">
-        <h3 class="navbar-title">Loïc D.</h3>
+        <h3 class="navbar-title"><a href="#">Loïc D.</a></h3>
         <ul class="footer-list">
             <li><a href="#">Accueil</a></li>
             <li><a href="#">À Propos</a></li>
@@ -297,6 +311,7 @@
         </li>
     </ul>
 </footer>
+<script src="./src/js/settings.js"></script>
 <script src="./src/js/dropdown.js"></script>
 <script src="./src/js/animation.js"></script>
 <script src="./src/js/main.js"></script>
