--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
           content="Étudiant passionné de web et de programmation, je suis à la recherche d'opportunités pour mettre en pratique mes compétences en HTML, CSS, JavaScript et plus encore. Découvrez mon parcours, mes projets et mes aspirations dans le domaine du développement web sur mon site CV.">
     <meta name="author" content="Loïc Delanoë">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Space+Grotesk:wght@300;400;500&display=swap"
           rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
@@ -25,7 +23,7 @@
     <h1 class="hidden">Loïc Delanoë,&nbsp;Développeur web</h1>
     <ul class="header-list">
         <li>
-            <h2 class="navbar-title"><a href="index.html">Loïc D.</a></h2>
+            <h2 class="navbar-title"><a href="index.html" title="Loïc D. - CV">Loïc D.</a></h2>
         </li>
         <li>
             <button id="burgerButton" class="hidden">Open burger menu</button>
@@ -270,18 +268,18 @@
 <footer>
     <h2 class="hidden">Footer</h2>
     <nav class="footer-nav">
-        <h3 class="navbar-title"><a href="#">Loïc D.</a></h3>
+        <h3 class="navbar-title"><a href="#" title="Loïc D. - CV">Loïc D.</a></h3>
         <ul class="footer-list">
             <li><a href="#">Accueil</a></li>
-            <li><a href="#">À Propos</a></li>
-            <li><a href="#">Formations</a></li>
-            <li><a href="#">Compétences</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">À Propos</a></li>
+            <li><a href="#formation">Formations</a></li>
+            <li><a href="#skills">Compétences</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="social-list">
-            <li><a href="#" class="social-button facebook">Facebook</a></li>
-            <li><a href="#" class="social-button instagram">Instagram</a></li>
-            <li><a href="#" class="social-button twitter">Twitter</a></li>
+            <li><a href="https://www.facebook.com" class="social-button facebook">Facebook</a></li>
+            <li><a href="https://www.instagram.com" class="social-button instagram">Instagram</a></li>
+            <li><a href="https://www.twitter.com" class="social-button twitter">Twitter</a></li>
         </ul>
     </nav>
     <ul class="contact-list footer">
