Fix href link for navbar-title

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <footer>
     <h2 class="hidden">Footer</h2>
     <nav class="footer-nav">
-        <h3 class="navbar-title"><a href="#" title="Loïc D. - CV">Loïc D.</a></h3>
+        <h3 class="navbar-title"><a href="#" title="Retour à la page d'accueil">Loïc D.</a></h3>
         <ul class="footer-list">
             <li><a href="#">Accueil</a></li>
             <li><a href="#about">À Propos</a></li>
