--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         <a href="#myProfil" class="cta primary" title="En savoir plus sur moi" data-animation="showUp">Découvrez moi</a>
     </section>
     <section id="contact" class="contact-section">
-        <ul class="contact-list" data-animation="showUp">
-            <li id="coordonnees">
+        <ul class="contact-list">
+            <li id="coordonnees" data-animation="showUp">
                 <h3 class="contact-title">Contact</h3>
                 <address itemprop="telephone">Téléphone&nbsp;:&nbsp;
                     <a class="telephone" href="tel:+33604014765">+ 33 (0)6 04 01 47 65</a>
                 </address>
             </li>
-            <li>
+            <li data-animation="showUp">
                 <h3 class="contact-title">Coordonnées</h3>
                 <address itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                     <span itemprop="streetAddress">Rue Hullos,&nbsp;69</span>,
@@ -106,7 +106,7 @@
                     <span itemprop="addressLocality">Liège</span>
                 </address>
             </li>
-            <li>
+            <li data-animation="showUp">
                 <div class="contact-mail-wrapper">
                     <h3 class="contact-title">Mon email</h3>
                     <a href="mailto:loic.del4127@gmail.com" itemprop="email"
@@ -183,7 +183,7 @@
         <article class="skills-wrapper base-container">
             <h3 class="hidden">Les compétences que j'ai aqcuis</h3>
             <figure class="skills-img-wrapper">
-                <img src="./img/article-section-img.webp" alt="code CSS" data-animation="scaleUp">
+                <img src="./img/skill-img-update.jpg" alt="code CSS" data-animation="scaleUp">
                 <figcaption class="hidden">Code <abbr title="Cascading Style Sheets">CSS</abbr> dans un éditeur de texte
                 </figcaption>
             </figure>
