Optimized js file

--- a/index.html
+++ b/index.html
@@ -308,9 +308,6 @@
         </li>
     </ul>
 </footer>
-<script src="./src/js/settings.js"></script>
-<script src="./src/js/dropdown.js"></script>
-<script src="./src/js/animation.js"></script>
-<script src="./src/js/main.js"></script>
+<script src="./dist/main.js"></script>
 </body>
 </html>
