--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
         <li>
             <button id="burgerButton" class="hidden">Open burger menu</button>
-            <nav id="mainNav" class="main-nav opened">
+            <nav id="mainNav" class="main-nav opened" role="navigation">
                 <h2 class="hidden">Navigation principale</h2>
                 <div class="burger-wrapper">
                     <a class="navbar-title" href="index.html">Loïc D.</a>
