Add background-image for opinion section and article tag

--- a/index.html
+++ b/index.html
@@ -149,30 +149,33 @@
         </article>
     </section>
     <section id="opinion" class="opinion-section section">
-        <h2 class="title" data-animation="showUp">Ce qui est important pour moi</h2>
-        <p data-animation="showUp">Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui
-            fournit un design soigné et
-            qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que
-            l’accessibilité pour
-            les personnes en situations de handicap.</p>
-        <ul class="opinion-wrapper">
-            <li class="opinion-card" data-animation="showUp">
-                <h3 class="opinion-title">Design Web</h3>
-                <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne idée
-                    de ce que leur site va donner quand il sera déployé.</p>
-            </li>
-            <li class="opinion-card" data-animation="showUp">
-                <h3 class="opinion-title">Développement Web</h3>
-                <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions
-                    des langages&nbsp;(sémantique en HTML).</p>
-            </li>
-            <li class="opinion-card" data-animation="showUp">
-                <h3 class="opinion-title">Accessibilité</h3>
-                <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être
-                    pensé
-                    aussi pour les personnes en situation de handicap.</p>
-            </li>
-        </ul>
+        <h2 class="hidden">Ma façon de travailler</h2>
+        <article class="opinion-article">
+            <h2 class="title" data-animation="showUp">Ce qui est important pour moi</h2>
+            <p data-animation="showUp">Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui
+                fournit un design soigné et
+                qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que
+                l’accessibilité pour
+                les personnes en situations de handicap.</p>
+            <ul class="opinion-wrapper">
+                <li class="opinion-card" data-animation="showUp">
+                    <h3 class="opinion-title">Design Web</h3>
+                    <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne idée
+                        de ce que leur site va donner quand il sera déployé.</p>
+                </li>
+                <li class="opinion-card" data-animation="showUp">
+                    <h3 class="opinion-title">Développement Web</h3>
+                    <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions
+                        des langages&nbsp;(sémantique en HTML).</p>
+                </li>
+                <li class="opinion-card" data-animation="showUp">
+                    <h3 class="opinion-title">Accessibilité</h3>
+                    <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être
+                        pensé
+                        aussi pour les personnes en situation de handicap.</p>
+                </li>
+            </ul>
+        </article>
     </section>
     <section class="skill-section section">
         <h2 id="skills" class="title" data-animation="showUp">Mes principales compétences</h2>
