--- a/index.html
+++ b/index.html
@@ -311,6 +311,6 @@
         </li>
     </ul>
 </footer>
-<script src="./src/main.js"></script>
+<script src="./dist/main.js"></script>
 </body>
 </html>
